# beskid_compiler

./: .gitignore  .gitmodules  CONTRIBUTING-extern.md  Cargo.toml  LICENSE  README.md  noxfile.py
crates/beskid_analysis/: Cargo.toml
crates/beskid_analysis/src/: beskid.pest  beskid_doc.pest  builtins.rs  doc_comment_parser.rs  lib.rs  parser.rs  services.rs
crates/beskid_analysis/src/analysis/: builtin.rs  diagnostic_kinds.rs  diagnostics.rs  mod.rs
crates/beskid_analysis/src/analysis/rules/: core.rs  mod.rs  resolve.rs  staged.rs  types.rs
crates/beskid_analysis/src/doc/: mod.rs  render.rs
crates/beskid_analysis/src/format/: emit.rs  expressions_emit.rs  mod.rs  policy.rs  statements_emit.rs  types_emit.rs
crates/beskid_analysis/src/format/items/: attributes_emit.rs  declarations_emit.rs  functions_emit.rs  helpers.rs  mod.rs  root_emit.rs  tests_emit.rs
crates/beskid_analysis/src/hir/: attribute_target_kind.rs  block.rs  common.rs  expression.rs  item.rs  legality.rs  literal.rs  match_arm.rs  mod.rs  module.rs  pattern.rs  phase.rs  program.rs  range_expression.rs  statement.rs  struct_literal_field.rs  types.rs
crates/beskid_analysis/src/hir/lowering/: core.rs  expressions.rs  items.rs  mod.rs  statements.rs  types.rs
crates/beskid_analysis/src/hir/normalize/: builders.rs  (+3 more)
crates/beskid_analysis/src/parsing/: error.rs  mod.rs  parsable.rs
crates/beskid_analysis/src/projects/: compile_plan.rs  discovery.rs  error.rs  mod.rs  model.rs  parser.rs  validator.rs  workflow.rs
crates/beskid_analysis/src/query/: ast_node.rs  descendants.rs  dyn_node_ref.rs  hir_descendants.rs  hir_node.rs  hir_node_ref.rs  hir_query.rs  hir_visit.rs  hir_walker.rs  mod.rs  query.rs  traversal_core.rs  visit.rs  walker.rs
crates/beskid_analysis/src/resolve/: errors.rs  ids.rs  items.rs  member_items.rs  mod.rs  module_graph.rs  resolver.rs  tables.rs
crates/beskid_analysis/src/syntax/: mod.rs
crates/beskid_analysis/src/types/: mod.rs  table.rs
crates/beskid_aot/: Cargo.toml
crates/beskid_aot/src/: api.rs  error.rs  lib.rs  linker.rs  object_module.rs  runtime.rs  target.rs
crates/beskid_cli/: Cargo.toml  build.rs
crates/beskid_cli/src/: build_ui.rs  cli.rs  corelib_runtime.rs  errors.rs  frontend.rs  main.rs  stdlib_runtime.rs
crates/beskid_cli/src/commands/: analyze.rs  build.rs  clif.rs  corelib.rs  doc.rs  fetch.rs  format.rs  interop_command.rs  lock.rs  mod.rs  parse.rs  run.rs  stdlib.rs  test.rs  tree.rs  update.rs
crates/beskid_codegen/: Cargo.toml
crates/beskid_codegen/src/: diagnostics.rs  errors.rs  lib.rs  module_emission.rs  services.rs
crates/beskid_codegen/src/lowering/: cast_intent.rs  context.rs  descriptor.rs  function.rs  lowerable.rs  mod.rs  node_context.rs  types.rs
crates/beskid_engine/: Cargo.toml
crates/beskid_engine/src/: engine.rs  jit_callable.rs  jit_module.rs  lib.rs  services.rs
crates/beskid_engine/tests/: descriptor_smoke.rs  extern_bad_sig.rs  extern_frontend_validation.rs  extern_security.rs  extern_tests.rs  extern_write_demo.rs  metrics_tests.rs
crates/beskid_lsp/: Cargo.toml
crates/beskid_lsp/src/: diagnostics.rs  lib.rs  logging.rs  main.rs  position.rs  text_sync.rs  workspace_scan.rs
crates/beskid_lsp/src/adapters/: completion.rs  mod.rs  symbol.rs
crates/beskid_lsp/src/features/: mod.rs
crates/beskid_lsp/src/protocol/: mod.rs  params.rs  request.rs  status.rs
crates/beskid_lsp/src/server/: backend.rs  init.rs  mod.rs
crates/beskid_lsp/src/session/: lifecycle.rs  mod.rs  store.rs
crates/beskid_pckg/: Cargo.toml
crates/beskid_pckg/src/: api_keys.rs  cli.rs  client.rs  config.rs  error.rs  lib.rs  models.rs  packages.rs  users.rs
crates/beskid_runtime/: Cargo.toml
crates/beskid_runtime/benches/: runtime_micro.rs
crates/beskid_runtime/interop_spec/: std.rs
crates/beskid_runtime/src/: builtins.rs  gc.rs  interop.rs  interop_generated.rs  interop_layout.rs  lib.rs
crates/beskid_runtime/src/builtins/: alloc.rs  arrays.rs  events.rs  gc_roots.rs  metrics.rs  mod.rs  panic_io.rs  sched.rs  strings.rs  test_helpers.rs  version.rs
crates/beskid_runtime/src/interop/: dispatch_table.rs  mod.rs
crates/beskid_tests/: Cargo.toml
crates/beskid_tests/fixtures/format/: core.expected.bd  core.input.bd  docs_and_control.expected.bd  docs_and_control.input.bd  tests.expected.bd  tests.input.bd
crates/beskid_tests/src/: doc_tests.rs  lib.rs
crates/beskid_tests/src/abi/: contracts.rs  mod.rs
crates/beskid_tests/src/analysis/: analyze_program.rs  diagnostics.rs  hir_query.rs  legality.rs  lowering.rs  mod.rs  pipeline.rs  resolve.rs  types.rs
crates/beskid_tests/src/aot/: defaults.rs  entrypoint.rs  mod.rs  object_build.rs  runtime_symbols.rs  standalone.rs
crates/beskid_tests/src/codegen/: descriptors.rs  diagnostics.rs  lowering.rs  mod.rs  unsupported.rs  util.rs
crates/beskid_tests/src/format/: mod.rs
crates/beskid_tests/src/interop/: dispatch.rs  extractor.rs  generator.rs
crates/beskid_tests/src/lsp/: completion.rs  hover.rs  mod.rs  references.rs  semantic_tokens.rs  support.rs
crates/beskid_tests/src/parsing/: attributes.rs  contracts.rs  control_flow.rs  enums.rs  expression_rules.rs  expressions.rs  functions.rs  item_rules.rs  lexical.rs  literals.rs  match_expr.rs  methods.rs  mod.rs  modules.rs  patterns.rs  statements.rs  string_rules.rs  struct_literals.rs  types.rs  util.rs
crates/beskid_tests/src/pckg/: client.rs
crates/beskid_tests/src/projects/: compile_plan.rs  discovery.rs  graph.rs  lockfile.rs  manifest.rs  mod.rs  resolution.rs  std_env_lock.rs  workspace_manifest.rs
crates/beskid_tests/src/runtime/: alloc.rs  events.rs  guard.rs  jit.rs  jit_callable.rs  metrics.rs  mod.rs  panic_messages.rs  parity.rs  sched.rs  strings.rs
crates/beskid_tests/src/syntax/: expressions.rs  items.rs  mod.rs  query.rs  statements.rs  types.rs  util.rs
crates/gc-arena/: Cargo.toml
crates/gc-arena/derive/: Cargo.toml
crates/gc-arena/derive/src/: lib.rs
crates/gc-arena/src/: arena.rs  context.rs  dynamic_roots.rs  gc.rs  gc_weak.rs
crates/gc-arena/tests/: tests.rs
(+249 files in other folders)
