[workspace]
resolver = "3"
members = ["crates/beskid_analysis", "crates/beskid_cli", "crates/beskid_tests", "crates/beskid_ast_derive", "crates/beskid_codegen", "crates/beskid_abi", "crates/beskid_runtime", "crates/beskid_engine", "crates/gc-arena", "crates/gc-arena/derive", "crates/beskid_lsp", "crates/beskid_aot"]
[workspace.dependencies]
allocator-api2 = { version = "0.2", default-features = false, features = ["alloc"] }
enum-map = { version = "2.7", default-features = false }
gc-arena-derive = { path = "crates/gc-arena/derive", version = "0.5.3" }
hashbrown = { version = "0.16", default-features = false }
indexmap = { version = "2.13", default-features = false }
pest = "2.8"
pest_derive = "2.8"
pest-ast = "0.3.3"
from-pest = "0.3.3"
proc-macro2 = "1.0.56"
quote = "1.0.26"
rand = "0.8"
slotmap = { version = "1.1", default-features = false }
smallvec = { version = "1.15", default-features = false }
syn = { version = "2.0.17", features = ["default", "visit-mut"] }
synstructure = "0.13"
tracing = { version = "0.1.37", default-features = false }
trybuild = "1.0"
