[package]
name = "beskid_analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = { workspace = true }
pest_derive = { workspace = true }
pest-ast = { workspace = true }
from-pest = { workspace = true }
beskid_ast_derive = { path = "../beskid_ast_derive" }
miette = { version = "7.1", features = ["fancy"] }
thiserror = "2.0"
daggy = "0.9.0"
anyhow = "1"
