[package]
name = "beskid_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
beskid_aot = { path = "../beskid_aot" }
beskid_analysis = { path = "../beskid_analysis" }
beskid_codegen = { path = "../beskid_codegen" }
beskid_engine = { path = "../beskid_engine" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
miette = { version = "7.1", features = ["fancy"] }
pest = { workspace = true }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
argfile = "0.2"
