[package]
name = "beskid_codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
cranelift-codegen = "0.128.3"
cranelift-frontend = "0.128.3"
cranelift-module = "0.128.3"
beskid_analysis = { path = "../beskid_analysis" }
beskid_runtime = { path = "../beskid_runtime" }
anyhow = "1"

[dev-dependencies]
pest = { workspace = true }
