[package]
name = "beskid_lsp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "beskid_lsp"
path = "src/main.rs"

[dependencies]
beskid_analysis = { path = "../beskid_analysis" }
pest = { workspace = true }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "io-std", "sync"] }
tower-lsp-server = "0.23.0"
serde_json = "1"
tracing = "0.1"
