[package]
name = "beskid_pckg"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
comfy-table = "7"
indicatif = { version = "0.18", features = ["tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1.48", features = ["rt-multi-thread", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2"
walkdir = "2"
zip = "2"
