[package]
name = "beskid_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
beskid_abi = { path = "../beskid_abi" }
gc-arena = { path = "../gc-arena" }
gc-arena-derive = { path = "../gc-arena/derive" }

[dev-dependencies]
criterion = "0.5"

[features]
metrics = []
arrays_backing = []
sched = []

[[bench]]
name = "runtime_micro"
harness = false
