[package]
name = "gc-arena"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []
tracing = ["dep:tracing"]
allocator-api2 = ["dep:allocator-api2", "hashbrown?/allocator-api2"]

[dependencies]
allocator-api2 = { version = "0.2", optional = true, default-features = false, features = ["alloc"] }
enum-map = { version = "2.7", optional = true, default-features = false }
gc-arena-derive = { path = "./derive"}
hashbrown = { version = "0.16", optional = true, default-features = false }
indexmap = { version = "2.13", optional = true, default-features = false }
slotmap = { version = "1.1", optional = true, default-features = false }
smallvec = { version = "1.15", optional = true, default-features = false }
tracing = { version = "0.1.37", optional = true, default-features = false }

[dev-dependencies]
rand = "0.8"
trybuild = "1.0"
